fixed spacing on horz tables

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,9 @@ body {
 }
 
 .selected {
-    box-shadow: #B4F285 0 0 2px 1px;
+    //box-shadow: #B4F285 0px 0px 2px 1px;
+    box-shadow: #ccc 1px 1px 2px 1px;
+    background: #fefefe;
 }
 
 .unselectable {
